--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,6 +46,7 @@ security:
     access_control:
         - { path: ^/login, allow_if: "!is_authenticated() || is_remember_me()" }
         - { path: '^/register', allow_if: "!is_authenticated()" }
+        - { path: '^/reset-password', allow_if: "!is_authenticated()" }
         - { path: '^/account', roles: IS_AUTHENTICATED_FULLY }
         - { path: '^/*pins', roles: ROLE_ADMIN }
         - { path: '^/*home', roles: ROLE_USER }
