--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "require": {
         "php": ">=7.2.5",
         "ext-ctype": "*",
+        "ext-gd": "^7.4",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.11",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
-        "gd": "*",
         "knplabs/knp-paginator-bundle": "^5.4",
         "knplabs/knp-time-bundle": "^1.13",
         "liip/imagine-bundle": "^2.3",
